--- a/CheckoutDetailing/cart.html
+++ b/CheckoutDetailing/cart.html
@@ -78,7 +78,7 @@
   
       <h3>Taxes</h3>
   
-      <h4>Estimated total</h4>
+      <h4>Estimated total<span id="EstimatedTotal12"></span></h4>
       <h4 id="affirm" href=""><span>$32/mo with&nbsp;</span><img style="width: 37px; height: 18px;" src="https://cdn-assets.affirm.com/images/black_logo-white_bg.jpg" alt="" srcset=""></h4>
       <a id="learnHow" href="">Learnhow</a>
       
