--- a/productDetail.html
+++ b/productDetail.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/productDetail.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="product_style.css" /> -->
+    <link rel="stylesheet" href="style_nav.css" />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,200,0,0" />
 </head>
 <body>
     <!-- <div id="detailPage"></div>
     <div id="Page2"></div> -->
-     <div id="nav"></div>
+    <div class="nav" style="color: white;"></div>
 
     <div id="MainDetails">
         <div id="div1">
@@ -37,9 +43,9 @@
 
             <div>
                 <p id="coca">Coca-cola</p>
-                <h3>Coca-Cola Soda Soft Drink, 16.9 fl oz, 6 Pack</h3>
-                <p>reviews</p>
-                <h1>Now $3.28</h1>
+                <h3 id="brandName">Coca-Cola Soda Soft Drink, 16.9 fl oz, 6 Pack</h3>
+                <p id="rating">reviews</p>
+                <h1 id="Price1">3.28</h1>
                 <p id="price">Price when purchased online</p>
                 <button id="bt3">Add to cart</button>
                 <hr>
@@ -125,6 +131,7 @@
 
     </div>
     
+     <div class="footer"></div>
 </body>
 </html>
-<script src="js/productDetail.js"></script>
+<script src="js/productDetail.js" type="module"></script>
