--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <title>Walmart</title>
   </head>
   <body>
+    <!-- navbar -->
     <div id="navbar-container"></div>
+
+    <!-- slider -->
     <div id="maindiv">
       <div class="all_slider">
         <div class="slider active">
@@ -48,7 +51,6 @@
     </div>
 
     <!-- IST Div -->
-
     <div class="mainpage0">
       <div class="page0">
         <div class="page00">
