'landing_page_fixed'

--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>navbar</title>
     <link rel="stylesheet" href="style_nav.css" />
     <link
       rel="stylesheet"
@@ -21,12 +21,13 @@
         <div class="E">
           <div id="iop" class="C" style="display: flex">
             <div>
-              <p id="bold">
+              <img  class = "logo" src="logo-removebg-preview.png" alt="logo">
+              <!-- <p id="bold">
                 walmart
                 <span id="pc" class="material-symbols-outlined">
                   recommend
                 </span>
-              </p>
+              </p> -->
             </div>
           </div>
           <!-- <div><span class="material-symbols-outlined"> window </span></div> -->
