--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
     <link rel="stylesheet" href="./landing_page/index.css" />
     <link rel="stylesheet" href="./style_nav.css" />
+    <link rel="stylesheet" href="./css/main.css">
     <title>Walmart</title>
   </head>
   <body>
@@ -309,6 +310,9 @@
       <p>We’d love to hear what you think!</p>
       <button id="feedbackButton">Give feedback</button>
     </div>
+
+    <!-- footer -->
+    <div id="footer-container"></div>
   </body>
 </html>
 
