--- a/CheckoutDetailing/payment.html
+++ b/CheckoutDetailing/payment.html
@@ -104,11 +104,12 @@
           <h3> Subtotal <span id="totalIteminCart1"></span></h3>
          <h3 >Savings <span id="saving23"></span></h3>
     
-      <h3>Shipping</h3>
+      <h3>Shipping  <span id="s">Free
+         </span> </h3>
   
-      <h3>Taxes</h3>
+      <h3>Taxes   <span>$8.22</span></h3>
   
-      <h4>Estimated total <span id="estimatedTotal"></span></h4>
+      <h3>Estimated total <span id="estimatedTotal"></span></h3>
       <h4 id="affirm" href=""><span>$32/mo with&nbsp;</span><img style="width: 37px; height: 18px;" src="https://cdn-assets.affirm.com/images/black_logo-white_bg.jpg" alt="" srcset=""></h4>
       <a id="learnHow" href="">Learnhow</a>
       </div>
